--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-fetch-blob",
+  "name": "@jtreact/rn-fetch-blob",
   "version": "0.13.0-beta-1",
   "description": "A module provides upload, download, and files access API. Supports file stream read/write for process large files.",
   "main": "index.js",
